--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -92,9 +92,11 @@
     <footer class="mt-10">
       <hr>
 
-      <p class="text-xs mt-5 mb-10">Last updated @ {{ now.Format "Jan 2, 2006" }} by {{ .Site.Params.Name }} &middot;
+      <p class="text-xs mt-5 mb-5">Last updated @ {{ now.Format "Jan 2, 2006" }} by {{ .Site.Params.Name }} &middot;
         Contact <a href="mailto:{{.Site.Params.email}}" rel="me">{{ .Site.Params.email }}</a></p>
       <!--  &middot; Generated @ {{ now.Format "Jan 2, 2006" }} -->
+      <hr>
+      <p class="text-xs mt-5">☠️☠️ Using the <a target="_blank" href="https://github.com/harperreed/simple-one-page-quick-start">SOPQS template</a> by <a target="_blank" href="https://harper.lol">Harper</a> ☠️☠️</p>
     </footer>
 
   </div>
